# Lithoclass

./: .gitignore  CLAUDE.md  DECISIONS.md  IDEAS_PARKED.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/: lith_lookup.csv
data/processed/: clean.parquet
notebooks/: 02_nvcl_clustering.ipynb
reports/: class_balance.md  data_profile.md  results.md
src/lithoclass/: __init__.py  clean.py  evaluate.py  extract.py  io.py  make_clean.py  make_figures.py  make_lookup.py  model.py  nvcl.py  plots.py  profile.py  transform.py
tests/: test_clean.py  test_evaluate.py  test_io.py  test_make_clean.py  test_nvcl.py  test_plots.py  test_profile.py  test_smoke.py  test_transform.py
tests/fixtures/: geochem_tiny.csv
